--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,7 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Even_managment_system.jar
+dist.jar=${dist.dir}/Event_managment_system.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.bson-3.3.0.jar=C:\\Users\\pc\\Desktop\\Study\\MongoDB Java Drivers_\\MongoDB Java Drivers_\\bson-3.3.0.jar
