--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,11 +32,15 @@ dist.jar=${dist.dir}/Event_managment_system.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.bson-3.3.0.jar=C:\\Users\\pc\\Desktop\\Study\\MongoDB Java Drivers_\\MongoDB Java Drivers_\\bson-3.3.0.jar
+file.reference.bson-3.3.0.jar-1=C:\\Users\\pc\\Pictures\\MongoDB Java Drivers_ (1)\\MongoDB Java Drivers_\\bson-3.3.0.jar
 file.reference.gson-2.8.0.jar=C:\\Users\\pc\\Desktop\\Study\\MongoDB Java Drivers_\\MongoDB Java Drivers_\\gson-2.8.0.jar
+file.reference.gson-2.8.0.jar-1=C:\\Users\\pc\\Desktop\\Study\\MongoDB Java Drivers_\\MongoDB Java Drivers_\\gson-2.8.0.jar
 file.reference.jcalendar-1.4.jar=F:\\Downloads\\jcalendar-1.4.jar
 file.reference.jdatepicker-1.3.4.jar=F:\\Downloads\\jdatepicker-1.3.4.jar
 file.reference.mongodb-driver-3.3.0.jar=C:\\Users\\pc\\Desktop\\Study\\MongoDB Java Drivers_\\MongoDB Java Drivers_\\mongodb-driver-3.3.0.jar
+file.reference.mongodb-driver-3.3.0.jar-1=C:\\Users\\pc\\Desktop\\Study\\MongoDB Java Drivers_\\MongoDB Java Drivers_\\mongodb-driver-3.3.0.jar
 file.reference.mongodb-driver-core-3.3.0.jar=C:\\Users\\pc\\Desktop\\Study\\MongoDB Java Drivers_\\MongoDB Java Drivers_\\mongodb-driver-core-3.3.0.jar
+file.reference.mongodb-driver-core-3.3.0.jar-1=C:\\Users\\pc\\Desktop\\Study\\MongoDB Java Drivers_\\MongoDB Java Drivers_\\mongodb-driver-core-3.3.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -45,7 +49,11 @@ javac.classpath=\
     ${file.reference.mongodb-driver-3.3.0.jar}:\
     ${file.reference.mongodb-driver-core-3.3.0.jar}:\
     ${file.reference.jdatepicker-1.3.4.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.gson-2.8.0.jar-1}:\
+    ${file.reference.mongodb-driver-3.3.0.jar-1}:\
+    ${file.reference.mongodb-driver-core-3.3.0.jar-1}:\
+    ${file.reference.bson-3.3.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
