--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Event managment system
+application.vendor=Laptop World
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -30,18 +31,17 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Event_managment_system.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.bson-3.3.0.jar=C:\\Users\\pc\\Desktop\\Study\\MongoDB Java Drivers_\\MongoDB Java Drivers_\\bson-3.3.0.jar
-file.reference.bson-3.3.0.jar-1=C:\\Users\\pc\\Pictures\\MongoDB Java Drivers_ (1)\\MongoDB Java Drivers_\\bson-3.3.0.jar
 file.reference.gson-2.8.0.jar=C:\\Users\\pc\\Desktop\\Study\\MongoDB Java Drivers_\\MongoDB Java Drivers_\\gson-2.8.0.jar
-file.reference.gson-2.8.0.jar-1=C:\\Users\\pc\\Desktop\\Study\\MongoDB Java Drivers_\\MongoDB Java Drivers_\\gson-2.8.0.jar
+file.reference.hamcrest-core-1.3.jar=C:\\Users\\Laptop World\\Downloads\\hamcrest-core-1.3.jar
 file.reference.jcalendar-1.4.jar=F:\\Downloads\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=jcalendar-1.4.jar
 file.reference.jdatepicker-1.3.4.jar=F:\\Downloads\\jdatepicker-1.3.4.jar
+file.reference.junit-4.13.2.jar=C:\\Users\\Laptop World\\Downloads\\junit-4.13.2.jar
 file.reference.mongodb-driver-3.3.0.jar=C:\\Users\\pc\\Desktop\\Study\\MongoDB Java Drivers_\\MongoDB Java Drivers_\\mongodb-driver-3.3.0.jar
-file.reference.mongodb-driver-3.3.0.jar-1=C:\\Users\\pc\\Desktop\\Study\\MongoDB Java Drivers_\\MongoDB Java Drivers_\\mongodb-driver-3.3.0.jar
 file.reference.mongodb-driver-core-3.3.0.jar=C:\\Users\\pc\\Desktop\\Study\\MongoDB Java Drivers_\\MongoDB Java Drivers_\\mongodb-driver-core-3.3.0.jar
-file.reference.mongodb-driver-core-3.3.0.jar-1=C:\\Users\\pc\\Desktop\\Study\\MongoDB Java Drivers_\\MongoDB Java Drivers_\\mongodb-driver-core-3.3.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -51,11 +51,10 @@ javac.classpath=\
     ${file.reference.mongodb-driver-core-3.3.0.jar}:\
     ${file.reference.jdatepicker-1.3.4.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.gson-2.8.0.jar-1}:\
-    ${file.reference.mongodb-driver-3.3.0.jar-1}:\
-    ${file.reference.mongodb-driver-core-3.3.0.jar-1}:\
-    ${file.reference.bson-3.3.0.jar-1}:\
-    ${file.reference.jcalendar-1.4.jar-1}
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${libs.junit_4.classpath}:\
+    ${file.reference.junit-4.13.2.jar}:\
+    ${file.reference.hamcrest-core-1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -68,7 +67,9 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
