--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,12 @@
 compile.on.save=true
-file.reference.bson-3.3.0.jar=F:\\Downloads\\MongoDB Java Drivers_\\bson-3.3.0.jar
-file.reference.gson-2.8.0.jar=F:\\Downloads\\MongoDB Java Drivers_\\gson-2.8.0.jar
-file.reference.mongodb-driver-3.3.0.jar=F:\\Downloads\\MongoDB Java Drivers_\\mongodb-driver-3.3.0.jar
-file.reference.mongodb-driver-core-3.3.0.jar=F:\\Downloads\\MongoDB Java Drivers_\\mongodb-driver-core-3.3.0.jar
+do.depend=false
+do.jar=true
+file.reference.bson-3.3.0.jar=C:\\Users\\Laptop World\\Downloads\\MongoDB_Java_Drivers_\\MongoDB Java Drivers_\\bson-3.3.0.jar
+file.reference.gson-2.8.0.jar=C:\\Users\\Laptop World\\Downloads\\MongoDB_Java_Drivers_\\MongoDB Java Drivers_\\gson-2.8.0.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\Laptop World\\Downloads\\jcalendar-1.4.jar\\jcalendar-1.4.jar
+file.reference.jdatepicker-1.3.4.jar=C:\\Users\\Laptop World\\Downloads\\jar_files\\jdatepicker-1.3.4.jar
+file.reference.mongodb-driver-3.3.0.jar=C:\\Users\\Laptop World\\Downloads\\MongoDB_Java_Drivers_\\MongoDB Java Drivers_\\mongodb-driver-3.3.0.jar
+file.reference.mongodb-driver-core-3.3.0.jar=C:\\Users\\Laptop World\\Downloads\\MongoDB_Java_Drivers_\\MongoDB Java Drivers_\\mongodb-driver-core-3.3.0.jar
+javac.debug=true
+javadoc.preview=true
 user.properties.file=C:\\Users\\pc\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
