--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,6 +34,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.bson-3.3.0.jar=C:\\Users\\pc\\Desktop\\Study\\MongoDB Java Drivers_\\MongoDB Java Drivers_\\bson-3.3.0.jar
+file.reference.bson-3.3.0.jar-1=C:\\Users\\pc\\Pictures\\MongoDB Java Drivers_ (1)\\MongoDB Java Drivers_\\bson-3.3.0.jar
 file.reference.gson-2.8.0.jar=C:\\Users\\pc\\Desktop\\Study\\MongoDB Java Drivers_\\MongoDB Java Drivers_\\gson-2.8.0.jar
 file.reference.hamcrest-core-1.3.jar=C:\\Users\\Laptop World\\Downloads\\hamcrest-core-1.3.jar
 file.reference.jcalendar-1.4.jar=F:\\Downloads\\jcalendar-1.4.jar
@@ -54,7 +55,8 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar-1}:\
     ${libs.junit_4.classpath}:\
     ${file.reference.junit-4.13.2.jar}:\
-    ${file.reference.hamcrest-core-1.3.jar}
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.bson-3.3.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
